--- a/src/app/assets/styles/button-anchors.css
+++ b/src/app/assets/styles/button-anchors.css
@@ -29,7 +29,7 @@ button.btn-no-background + button {
 } 
 
 button[class*='has-background'] {
-    font-size: 18px;
+    font-size: 1.2em;
     font-weight: 500;
     padding: 7px 18px;
     box-shadow: var(--solid-dropshadow), 0 10px 5px 0 rgba(0, 0, 0, 0.15); 
